rtg_tests/negative/import_cycle/lib/lib.go
package lib

import _ "example.com/rtgtests/negative/cycle/cmd/app"
